[gd_scene load_steps=87 format=3 uid="uid://biim58k38oa7h"]

[ext_resource type="Script" path="res://scenes/scripts/main/player.gd" id="1_hermy"]
[ext_resource type="Texture2D" uid="uid://vnytxah5yagv" path="res://assets/textures/entities/player/hunter-prototype.png" id="2_3w5hk"]
[ext_resource type="Texture2D" uid="uid://ba0d4yi48tebh" path="res://assets/textures/entities/player/diagonal_down.png" id="3_8extk"]
[ext_resource type="Texture2D" uid="uid://b50x6eywaqegb" path="res://assets/textures/entities/player/hunter-prototype-going-down.png" id="3_d8sh1"]
[ext_resource type="PackedScene" uid="uid://bdfaybp4djcn2" path="res://components/status/health_component.tscn" id="3_pgpvp"]
[ext_resource type="Texture2D" uid="uid://b2ddbdydchxd7" path="res://assets/textures/entities/player/hunter-prototype-going-up.png" id="4_13q8e"]
[ext_resource type="Texture2D" uid="uid://cfunenyj7oh7e" path="res://assets/textures/entities/player/hunter-prototype-going-forward.png" id="4_i3hs0"]
[ext_resource type="PackedScene" uid="uid://c3atqdge540t0" path="res://components/status/hitbox_component.tscn" id="4_vxsth"]
[ext_resource type="Texture2D" uid="uid://bo1x0g42xcvfe" path="res://assets/textures/entities/player/diagonal_up.png" id="4_yry4s"]
[ext_resource type="Texture2D" uid="uid://cyu4c5paykoc3" path="res://assets/textures/entities/player/hunter-idle-going-down.png" id="6_q1qjn"]
[ext_resource type="PackedScene" uid="uid://b0dns7qycucl7" path="res://components/modules/inventory_module.tscn" id="6_whg1o"]
[ext_resource type="PackedScene" uid="uid://bocnfn48ib66i" path="res://components/modules/equipment_module.tscn" id="7_0klvy"]
[ext_resource type="Texture2D" uid="uid://j1kxc2btfi32" path="res://assets/textures/entities/player/hunter-idle-going-up.png" id="7_djrnn"]

[sub_resource type="Animation" id="Animation_vhpe5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"going_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Muzzles/MuzzleRightWing:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(51, 6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Muzzles/MuzzleLeftWing:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(51, 6)]
}

[sub_resource type="Animation" id="Animation_0qsot"]
resource_name = "diagonal_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"diagonal_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7nv5b"]
resource_name = "diagonal_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"diagonal_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_q7sbk"]
resource_name = "going_down"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"going_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Muzzles/MuzzleRightWing:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(51, 6), Vector2(36, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Muzzles/MuzzleLeftWing:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(51, 6), Vector2(36, -16)]
}

[sub_resource type="Animation" id="Animation_6gnbr"]
resource_name = "going_forward"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"going_forward"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ku113"]
resource_name = "going_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"going_up"]
}

[sub_resource type="Animation" id="Animation_jto3f"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_37hcd"]
resource_name = "idle_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4wjd2"]
resource_name = "idle-up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HunterSprites/HunterPrototype:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HunterSprites/HunterPrototype:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svklm"]
_data = {
"RESET": SubResource("Animation_vhpe5"),
"diagonal_down": SubResource("Animation_0qsot"),
"diagonal_up": SubResource("Animation_7nv5b"),
"going_down": SubResource("Animation_q7sbk"),
"going_forward": SubResource("Animation_6gnbr"),
"going_up": SubResource("Animation_ku113"),
"idle": SubResource("Animation_jto3f"),
"idle_down": SubResource("Animation_37hcd"),
"idle_up": SubResource("Animation_4wjd2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dmg1m"]
animation = &"going_forward"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hw62u"]
animation = &"idle_down"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7hjmj"]
animation = &"idle_up"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b4wag"]
animation = &"going_forward"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mamx3"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dmg1m")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_hw62u")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7hjmj")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_b4wag")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lx46n"]
animation = &"going_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v37dr"]
animation = &"diagonal_up"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rm1r8"]
animation = &"going_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gjnvx"]
animation = &"diagonal_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tjkrw"]
animation = &"diagonal_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dwu5j"]
animation = &"diagonal_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_6187s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lx46n")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_v37dr")
blend_point_1/pos = Vector2(-1, -0.5)
blend_point_2/node = SubResource("AnimationNodeAnimation_rm1r8")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_gjnvx")
blend_point_3/pos = Vector2(1, 0.5)
blend_point_4/node = SubResource("AnimationNodeAnimation_tjkrw")
blend_point_4/pos = Vector2(1, -0.5)
blend_point_5/node = SubResource("AnimationNodeAnimation_dwu5j")
blend_point_5/pos = Vector2(-1, 0.5)
blend_mode = 1
sync = true

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_b27ii"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fhq33"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ful8n"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qp7un"]
switch_mode = 1
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sooeb"]
advance_mode = 2
advance_condition = &"on_roll"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pt480"]
switch_mode = 1
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_intxe"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hljvu"]
advance_mode = 2
advance_condition = &"on_roll"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xwi3m"]
states/End/position = Vector2(1080, 152)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_mamx3")
states/Idle/position = Vector2(408, 253)
states/Moving/node = SubResource("AnimationNodeBlendSpace2D_6187s")
states/Moving/position = Vector2(595, 102)
states/Roll/node = SubResource("AnimationNodeBlendSpace2D_b27ii")
states/Roll/position = Vector2(797, 253)
states/Start/position = Vector2(211, 253)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_fhq33"), "Idle", "Moving", SubResource("AnimationNodeStateMachineTransition_ful8n"), "Moving", "Idle", SubResource("AnimationNodeStateMachineTransition_qp7un"), "Moving", "Roll", SubResource("AnimationNodeStateMachineTransition_sooeb"), "Roll", "Moving", SubResource("AnimationNodeStateMachineTransition_pt480"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_intxe"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_hljvu")]
graph_offset = Vector2(-122, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akku0"]
size = Vector2(72, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ohpa"]
atlas = ExtResource("3_8extk")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnwwt"]
atlas = ExtResource("3_8extk")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljmlj"]
atlas = ExtResource("3_8extk")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqr62"]
atlas = ExtResource("3_8extk")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mik4"]
atlas = ExtResource("4_yry4s")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfasw"]
atlas = ExtResource("4_yry4s")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_237r3"]
atlas = ExtResource("4_yry4s")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl3ya"]
atlas = ExtResource("4_yry4s")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsuey"]
atlas = ExtResource("3_d8sh1")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nipli"]
atlas = ExtResource("3_d8sh1")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_of32x"]
atlas = ExtResource("3_d8sh1")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8t87"]
atlas = ExtResource("3_d8sh1")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsgr7"]
atlas = ExtResource("3_d8sh1")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5djl"]
atlas = ExtResource("3_d8sh1")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3ubb"]
atlas = ExtResource("3_d8sh1")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok7q5"]
atlas = ExtResource("3_d8sh1")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxp54"]
atlas = ExtResource("4_i3hs0")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_14oxk"]
atlas = ExtResource("4_i3hs0")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y1mm"]
atlas = ExtResource("4_i3hs0")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bfvo"]
atlas = ExtResource("4_i3hs0")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcy5q"]
atlas = ExtResource("4_i3hs0")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_glkcs"]
atlas = ExtResource("4_i3hs0")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7rnk"]
atlas = ExtResource("4_i3hs0")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_717q0"]
atlas = ExtResource("4_i3hs0")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3cro"]
atlas = ExtResource("4_13q8e")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfyyd"]
atlas = ExtResource("4_13q8e")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s87qn"]
atlas = ExtResource("4_13q8e")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_42vnx"]
atlas = ExtResource("4_13q8e")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_33omb"]
atlas = ExtResource("4_13q8e")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_75dik"]
atlas = ExtResource("4_13q8e")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrt8m"]
atlas = ExtResource("4_13q8e")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5pv7"]
atlas = ExtResource("4_13q8e")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpil8"]
atlas = ExtResource("6_q1qjn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kg4c"]
atlas = ExtResource("6_q1qjn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko6x8"]
atlas = ExtResource("6_q1qjn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5lo0"]
atlas = ExtResource("6_q1qjn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku5pc"]
atlas = ExtResource("7_djrnn")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cujgc"]
atlas = ExtResource("7_djrnn")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yx5i"]
atlas = ExtResource("7_djrnn")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kd0v"]
atlas = ExtResource("7_djrnn")
region = Rect2(300, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_nixh0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ohpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnwwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljmlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqr62")
}],
"loop": false,
"name": &"diagonal_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mik4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfasw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_237r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl3ya")
}],
"loop": true,
"name": &"diagonal_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsuey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nipli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of32x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8t87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsgr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5djl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3ubb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok7q5")
}],
"loop": false,
"name": &"going_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxp54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14oxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y1mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bfvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcy5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glkcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7rnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_717q0")
}],
"loop": true,
"name": &"going_forward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3cro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfyyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s87qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42vnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33omb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75dik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrt8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5pv7")
}],
"loop": false,
"name": &"going_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3w5hk")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpil8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kg4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko6x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5lo0")
}],
"loop": false,
"name": &"idle_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku5pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cujgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yx5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kd0v")
}],
"loop": false,
"name": &"idle_up",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 26
motion_mode = 1
script = ExtResource("1_hermy")

[node name="PlayerAnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_svklm")
}
tree_root = SubResource("AnimationNodeStateMachine_xwi3m")
anim_player = NodePath("../HunterSprites/HunterPrototype/HunterAnimation")
parameters/conditions/idle = false
parameters/conditions/moving = false
parameters/conditions/on_roll = false
parameters/Idle/blend_position = Vector2(-0.00256413, 0.988484)
parameters/Moving/blend_position = Vector2(-0.14359, 0.481482)
parameters/Roll/blend_position = Vector2(0, 0)

[node name="SelfHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 1.5)
shape = SubResource("RectangleShape2D_akku0")
disabled = true

[node name="Muzzles" type="Node2D" parent="."]

[node name="MuzzleLeftWing" type="Marker2D" parent="Muzzles"]
position = Vector2(51, 6)

[node name="MuzzleRightWing" type="Marker2D" parent="Muzzles"]
position = Vector2(51, 6)

[node name="HunterSprites" type="Node2D" parent="."]

[node name="HunterIdleSprite" type="Sprite2D" parent="HunterSprites"]
visible = false
texture = ExtResource("2_3w5hk")

[node name="HunterPrototype" type="AnimatedSprite2D" parent="HunterSprites"]
sprite_frames = SubResource("SpriteFrames_nixh0")
animation = &"going_down"

[node name="HunterAnimation" type="AnimationPlayer" parent="HunterSprites/HunterPrototype"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_svklm")
}
speed_scale = 2.0

[node name="InventoryModule" parent="." instance=ExtResource("6_whg1o")]

[node name="EquipmentModule" parent="." instance=ExtResource("7_0klvy")]

[node name="HealthComponent" parent="." instance=ExtResource("3_pgpvp")]
max_health = 3

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_vxsth")]
collision_mask = 10
input_pickable = false
health_component = NodePath("../HealthComponent")
immunity_frame_limit = 20

[node name="PlayerHitbox" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(10, -5, 17, -1, 31, -1, 38, 3, -3, 8, -26, 17, -32, 13, -22, 8, -32, 8, -38, -13, -23, -5)

[connection signal="switch_controls_lock" from="." to="." method="_switch_controls_lock"]
[connection signal="ammo_changed" from="EquipmentModule" to="." method="_on_ammo_changed"]
[connection signal="health_change" from="HealthComponent" to="." method="_on_health_component_health_change"]
